stream 11.3 доработки с прошлой дз